# experts-backend

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
app/: __init__.py  db.py  main.py
app/api/: deps.py
app/clients/: acp_admin.py  acp_gateway.py  codex_skills.py  ngent.py  pageindex.py
app/core/: config.py  errors.py  security.py
app/domain/: auth.py  chat.py  experts.py  knowledge.py  library.py  plans.py  skills.py  tenants.py
app/services/: _sql.py  auth_service.py  chat_repository.py  chat_service.py  document_repository.py  document_service.py  expert_category_repository.py  expert_category_service.py  expert_group_repository.py  expert_group_service.py  expert_repository.py  expert_service.py  kb_authz.py  knowledge_base_repository.py  knowledge_base_service.py  library_repository.py  library_service.py  object_store.py  plan_pricing.py  plan_repository.py  plan_service.py  skill_repository.py  skill_service.py  skill_storage.py  subscription_repository.py  subscription_service.py  tenant_service.py
docs/: ARCHITECTURE.md  CHAT_WEB_SEARCH_ROUTING_PLAN.md  EXPERT_MODULE_REMEDIATION.md  EXPERT_PLAN_DESIGN.md  EXPERT_PLAN_PHASE1_DESIGN.md  KNOWLEDGE_BASE_STORAGE_AND_BUILD_DESIGN.md  KNOWLEDGE_BASE_STORAGE_AND_BUILD_SPEC.md  LIBRARY_FILE_LIFECYCLE.md  USER_LIBRARY_DESIGN.md  USER_TENANT_RBAC_DESIGN.md  USER_TENANT_RBAC_IMPLEMENTATION_PLAN.md  专家套餐色设计方案.md
docs/api/: API_REFERENCE.md  README.md  auth.md  builds.md  chat.md  plans.md  (+10 more)
scripts/: acp_smoke.py  bootstrap_admin.py  dev.sh  export_api_docs.py
tests/: conftest.py  test_app.py
(+46 files in other folders)
