[project]
name = "amazon-experts-backend"
version = "0.1.0"
description = "FastAPI backend for Amazon experts workflows."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "email-validator>=2.2.0",
  "httpx>=0.27.0",
  "PyJWT>=2.9.0",
  "python-multipart>=0.0.9",
  "psycopg[binary]>=3.2.0",
  "minio>=7.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["infra*", "tests*"]
